# Mai_OOP_Lab3_V6

./: .gitignore  CMakeLists.txt  README.md
include/: figure.hpp  hexagon.hpp  octagon.hpp  pentagon.hpp
src/: array.cpp  hexagon.cpp  main.cpp  octagon.cpp  pentagon.cpp
tests/: tests_01.cpp
